<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_characters"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search_amiibo"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/amiibo_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_check_tag"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/check_tag_compatibility"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_back_to_home"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/back_to_home"
        app:showAsAction="never" />
</menu>

