<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/characterListFragment">

    <fragment
        android:id="@+id/characterListFragment"
        android:name="com.bitcoinerrorlog.skywriter.ui.list.CharacterListFragment"
        android:label="@string/characters" />

    <fragment
        android:id="@+id/writeNFCFragment"
        android:name="com.bitcoinerrorlog.skywriter.ui.write.WriteNFCFragment"
        android:label="@string/write_to_tag" />

    <fragment
        android:id="@+id/tagCheckFragment"
        android:name="com.bitcoinerrorlog.skywriter.ui.check.TagCheckFragment"
        android:label="@string/check_tag_compatibility" />

</navigation>
